add reamed, swagger, docker compose, env
