# api/src/modules/dividends/dtos/ICreateDividendDTO.ts
@@ -1,0 +1,6 @@
+export default interface ICreateDividendDTO {
+  name: string;
+  price: string;
+  date: string;
+  reason: string;
+}
